# raytracer

./: .gitignore  .vimrc  CMakeLists.txt  README.md  image.ppm
src/: aabb.h  aarect.h  box.h  bvh.h  camera.h  color.h  constant_medium.h  hittable.h  hittable_list.h  main.cpp  material.h  mesh_obj.h  moving_sphere.h  perlin.h  ray.h  rtweekend.h  rtweekend_stb_image.h  scene.h  sphere.h  tests.cpp  texture.h  triangle.h  vec3.h
